feat: add customer recipient APIs
